...
                        topRight: Radius.circular(20),
                      ),
                      color: Colors.white,
                    ),
                    child: Center(
                      child: Text(
                        "Login",
                        style: TextStyle(
                          // color: Colors.green,
                          color: Color(0xff121515),
                          fontSize: 20,
                        ),
                      ),
...
                            },
                            builder: (context, state) {
                              return state.status ==
                                      FormzStatus.submissionInProgress
                                  ? CircularProgressIndicator()
                                  : Text(
                                      "Register",
                                      style: TextStyle(
                                        fontFamily: "Poppins",
                                        color: Colors.pinkAccent,
                                      ),
                                    );
                            },
...
